<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo">

    <TextView
        android:id="@+id/text_view_city_name_weather_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/minimum_margin"
        android:text="@string/bialystok"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_pogoda_na_dzis_text_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_city_name_weather_activity"
        android:layout_marginLeft="@dimen/minimum_margin"
        android:layout_marginStart="@dimen/minimum_margin"
        android:layout_marginTop="15dp"
        android:text="@string/pogoda_na_dzis"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/image_view_weather_image_weather_fragment"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view_city_name_weather_activity"
        android:layout_margin="@dimen/minimum_margin"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/text_view_opis_pogody_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_pogoda_na_dzis_text_weather_fragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/light_rain"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/text_view_temperatura_text_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_opis_pogody_weather_fragment"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/temperatura"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_temperatura_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view_opis_pogody_weather_fragment"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/text_23"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_temperatura_max_text_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_temperatura_text_weather_fragment"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/temperatura_max"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_temperatura_max_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view_temperatura_text_weather_fragment"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/text_23"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_temperatura_min_text_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_temperatura_max_weather_fragment"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/temeratura_min"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_temperatura_min_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view_temperatura_max_weather_fragment"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/text_23"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_cisnienie_text_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_temperatura_min_text_weather_fragment"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/cisnienie"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_cisnienie_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view_temperatura_min_text_weather_fragment"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/text_1026_hpa"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_wilgotnosc_text_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_cisnienie_text_weather_fragment"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/wilgotonosc"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_wilgotnosc_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view_cisnienie_text_weather_fragment"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:text="96 %"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_wiatr_text_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_wilgotnosc_text_weather_fragment"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/wiatr"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_wiatr_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view_wilgotnosc_weather_fragment"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/text_10_km_h"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_zachmurzenie_text_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_wiatr_text_weather_fragment"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/zachmurzenie"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_zachmurzenie_weather_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view_wiatr_text_weather_fragment"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="7dp"
        android:text="80 %"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <ProgressBar
        android:id="@+id/progress_bar_weather_fragment"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>